--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 TODO:
-
-Core:
+- Consider switching to smart pointers in ShapeComponent.h.
+- Eventually move logging into class which can print to console and log to file.
 
 Camera
 Engine
@@ -8,34 +8,19 @@ Scene
 SceneManager
 Window
 World
-
-Debug:
-
 AllocationMetrics
 FileManagement
 Debug
 Logger
-
-Components:
-
 AnimationComponent
 CameraComponent
-ColorComponent
-Component
 HitboxComponent
 InputComponent
 LifetimeComponent
 ParticleComponent
-PlayerComponent
-RigidBodyComponent
-ShapeComponent
 SpriteComponent
 SpriteSheetComponent
 TagComponent
-TransformComponent
-
-Systems:
-
 RenderSystem
 CameraSystem
 AnimationSystem
@@ -46,47 +31,27 @@ HitboxRenderSystem
 InputSystem
 LifetimeSystem
 PhysicsSystem
-
-Components.h
-ECS.h
-Systems.h
-
-Event:
-
+Components
+ECS
+Systems
 Events
 Inputs
 EventHandler
 InputHandler
-
-Math:
-
-Hasher
 Math
 Matrix
 Noise
 RNG
 Vector2
-
-Parsing:
-
 Image
 ImageProcessor
-
-Physics:
-
 Manifold
 Physics
 RigidBody
 Transform
-
-Shapes:
-
 AABB
 Circle
 Shape
-
-Collision:
-
 AABB
 Collision
 DynamicAABBvsAABB
@@ -95,42 +60,20 @@ CirclevsAABB
 CirclevsCircle
 LinevsAABB
 PointvsAABB
-
-Procedural:
-
 Chunk
 ChunkManager
-
-Renderer:
-
-Color
 Renderer
-RenderMode
 Surface
 Texture
 TextureManager
-
-Text:
-
 Font
 FontManager
-FontStyle
 Text
-
-Sprites:
-
 Animation
-Flip
 PixelFormat
 SpriteMap
-
-Particles:
-
 Particle
 ParticleManager
-
-StateMachine:
-
 BaseState
 BaseStateMachine
 StateMachine
@@ -139,9 +82,6 @@ States
 StateMachineComponent
 StateMachiens
 StateMachineSystem
-
-States:
-
 ActiveButtonState
 DefaultButtonState
 FocusedButtonState
@@ -151,11 +91,7 @@ IdleState
 JumpState
 RunState
 WalkState
-
-Utils:
-
 TypeTraits
-
 Protegon
 
 
@@ -166,3 +102,14 @@ DONE:
 Singleton
 Direction
 Timer
+TransformComponent
+ColorComponent
+PlayerComponent
+RigidBodyComponent
+ShapeComponent
+Flip
+FontRenderMode
+FontStyle
+Hasher
+Color
+Colors
