--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,10 @@ TODO:
 - Eventually move logging into class which can print to console and log to file.
 - Add ability to copy text.
 - Add better documentation to Engine class.
+- Write tests for RNG class template parameters being random number engines.
+- Consider adding Polygon shape to collision system.
+
+WIP files:
 
 AnimationComponent
 CameraComponent
@@ -34,29 +38,20 @@ CirclevsCircle
 LinevsAABB
 PointvsAABB
 
-RNG
-EventHandler
 Camera
 SceneManager
 Scene
-Noise
-Math
-Matrix
-Manifold
-Physics
-Collision
-Events
 Animation
 SpriteMap
 Particle
 ParticleManager
+EventHandler
 World
 Image
 ImageProcessor
 Chunk
 ChunkManager
 Vector2
-TypeTraits
 ECS
 
 BaseState
@@ -83,7 +78,7 @@ Protegon
 
 
 
-DONE:
+Working well:
 
 Singleton
 Direction
@@ -120,3 +115,10 @@ PixelFormat
 Inputs
 InputHandler
 Engine
+RNG
+Noise
+Math
+Matrix
+Manifold
+Collision
+TypeTraits
