Update Animation and AnimationMap files to reflect the current engine standards

--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,7 @@ TODO:
 - Consider adding Polygon shape to collision system.
 - Go over all components and make sure destructors are done properly (no memory leaks).
 - Test all static collision utility functions.
+- Test dynamic collision utility functions.
 
 WIP files:
 
@@ -37,13 +38,8 @@ PhysicsSystem
 StateMachineSystem
 Systems
 
-DynamicAABBvsAABB
-
-Animation
-SpriteMap
 SceneManager
 Scene
-Camera
 Vector2
 Image
 ImageProcessor
@@ -69,9 +65,6 @@ RunState
 WalkState
 
 Protegon
-
-
-
 
 
 Working well:
@@ -128,3 +121,7 @@ CirclevsAABB
 CirclevsCircle
 LinevsAABB
 PointvsAABB
+DynamicAABBvsAABB
+Animation
+AnimationMap
+Camera
